--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,72 @@
-body{
-    background-color: #cbece4;
-    font-family: sans-serif;
+body {
+  background-color: #cbece4;
+  font-family: sans-serif;
 }
 
-.container{
-    max-width: 600px;
-    margin: 60px auto;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    background-color: white;
-    border-radius: 20px;
-    padding: 25px;
-   
+.container {
+  max-width: 600px;
+  margin: 60px auto;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  background-color: white;
+  border-radius: 20px;
+  padding: 25px;
 }
 
-h1{
-    color: #769ff1;
-    text-align: center;
+h1 {
+  color: #769ff1;
+  text-align: center;
 }
 
-
-
-h2{
-    text-align: center;
+h2 {
+  text-align: center;
 }
 
-h3{
-    margin: 0;
-    font-size: 28px;
-    margin: 0 0 5px;
-}
-select{
-    display: block;
-    width: 100%;
-    border-radius: 4px;
-    padding: 10px;
-}
-small{
-    font-size: 24px;
-    vertical-align: middle;
+h3 {
+  margin: 0;
+  font-size: 28px;
+  margin: 0 0 0;
 }
 
-.city{
-    display: flex;
-    justify-content: space-between;
-    margin: 30px 0;
-    padding: 20px 0;
-    border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+#current-timezone {
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 15px;
+  opacity: 0.8;
+}
+select {
+  display: block;
+  width: 100%;
+  border-radius: 4px;
+  padding: 10px;
+}
+small {
+  font-size: 24px;
+  vertical-align: middle;
 }
 
-
-.city:last-child{
-    border: none;
+.city {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 0;
+  padding: 20px 0;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
 }
 
-.time{
-    font-size: 48px;
-    font-weight: bold;
+.city:last-child {
+  border: none;
 }
 
-.date{
-    opacity: 0.8;
-    
+.time {
+  font-size: 48px;
+  font-weight: bold;
 }
 
+.date {
+  opacity: 0.8;
+}
 
-
-footer{
-    text-align: center;
-    font-size: 18px;
-    color: rgba(0, 0, 0, 0.8);
+footer {
+  text-align: center;
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.8);
 }
