--- a/css/style.css
+++ b/css/style.css
@@ -19,25 +19,27 @@ h1 {
 
 h2 {
   text-align: center;
+ 
 }
 
 h3 {
   margin: 0;
-  font-size: 28px;
+  font-size: 27px;
   margin: 0 0 0;
 }
 
 #current-timezone {
   text-align: center;
-  font-size: 20px;
-  margin-bottom: 15px;
-  opacity: 0.8;
+  font-size: 22px;
+  margin-bottom: 30px;
+  opacity: 0.9;
 }
 select {
   display: block;
   width: 100%;
   border-radius: 4px;
   padding: 10px;
+  font-size: 20px;
 }
 small {
   font-size: 24px;
@@ -50,6 +52,7 @@ small {
   margin: 30px 0;
   padding: 20px 0;
   border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+
 }
 
 .city:last-child {
@@ -69,4 +72,25 @@ footer {
   text-align: center;
   font-size: 18px;
   color: rgba(0, 0, 0, 0.8);
+}
+
+@media(max-width:900px){
+  h3{
+    font-size: 20px;
+  }
+
+  small{
+    font-size: 15px;
+  }
+
+  select{
+    font-size: 18px;
+  }
+  .time{
+      font-size: 20px;
+  }
+
+  .date{
+    font-size: 11px;
+  }
 }
